[gd_scene load_steps=7 format=3 uid="uid://d2b2gux5oqdsf"]

[ext_resource type="Script" path="res://main.gd" id="1_775eo"]
[ext_resource type="PackedScene" uid="uid://dxw5nu1gu8uom" path="res://mouse_hitbox.tscn" id="1_kdah5"]
[ext_resource type="PackedScene" uid="uid://gft403htls20" path="res://hud.tscn" id="3_yvx16"]
[ext_resource type="PackedScene" uid="uid://6krpyxr64qr1" path="res://goal.tscn" id="4_1626m"]
[ext_resource type="Texture2D" uid="uid://qkydk5inuh1f" path="res://gradient.png" id="5_ciriy"]
[ext_resource type="Texture2D" uid="uid://dkdw73ni0moin" path="res://ui/main_gradient_background.tres" id="6_5lg0m"]

[node name="Main" type="Node2D" groups=["Main"]]
script = ExtResource("1_775eo")

[node name="Balls" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Spawner1" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(32, 0)

[node name="Spawner2" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(1048, 0)

[node name="Spawner3" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(32, 2340)

[node name="Spawner4" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(1048, 2340)

[node name="MouseHitbox" parent="." instance=ExtResource("1_kdah5")]
position = Vector2(554, 943)

[node name="BallSpawnTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="BallSpawnTimerUpsideDown" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="HUD" parent="." instance=ExtResource("3_yvx16")]
unique_name_in_owner = true

[node name="Goal" parent="." instance=ExtResource("4_1626m")]
unique_name_in_owner = true
position = Vector2(554, 1180)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -5

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
modulate = Color(0.494118, 0.831373, 0.494118, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_ciriy")
stretch_mode = 6

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_5lg0m")

[connection signal="timeout" from="BallSpawnTimer" to="." method="_on_ball_spawn_timer_timeout"]
[connection signal="timeout" from="BallSpawnTimerUpsideDown" to="." method="_on_ball_spawn_timer_upside_down_timeout"]
